--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sajed Sarabandi Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sajed Sarabandi | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <p>I’m a Software Engineer working with satellite data.</p>
+  <div class="solar-system">
+    <div class="sun">Sajed</div>
+
+    <div class="orbit orbit1">
+      <a href="#experience" class="planet planet1">Experience</a>
+    </div>
+    <div class="orbit orbit2">
+      <a href="#projects" class="planet planet2">Projects</a>
+    </div>
+    <div class="orbit orbit3">
+      <a href="#publications" class="planet planet3">Publications</a>
+    </div>
+    <div class="orbit orbit4">
+      <a href="#contact" class="planet planet4">Contact</a>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
