Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -2,28 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sajed Sarabandi | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Starfield Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="solar-system">
-    <div class="sun">Sajed</div>
-
-    <div class="orbit orbit1">
-      <a href="#experience" class="planet planet1">Experience</a>
-    </div>
-    <div class="orbit orbit2">
-      <a href="#projects" class="planet planet2">Projects</a>
-    </div>
-    <div class="orbit orbit3">
-      <a href="#publications" class="planet planet3">Publications</a>
-    </div>
-    <div class="orbit orbit4">
-      <a href="#contact" class="planet planet4">Contact</a>
-    </div>
-  </div>
-
+  <div id="stars"></div>
   <script src="script.js"></script>
 </body>
 </html>
