--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Starfield Portfolio</title>
+  <title>Star Background</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="stars"></div>
+  <div class="background"></div>
 
   <script src="script.js"></script>
 </body>
