Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Star Background</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      width: 100vw;
-      background-image: url('stars.jpg'); /* Make sure this matches your image name */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Background image as <img> -->
+  <img src="stars.jpg" class="bg" alt="Star Background">
+
+  <!-- JavaScript for mouse movement -->
+  <script src="script.js"></script>
 </body>
 </html>
