--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Star Background</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <!-- Background image as <img> -->
-  <img src="stars.jpg" class="bg" alt="Star Background">
-
-  <!-- JavaScript for mouse movement -->
+  <canvas id="starCanvas"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
