--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 
   <!-- Background image as <img> -->
-  <img src="stars.jpg" class="bg" alt="Star Background">
+  <img src="stars.gif" class="bg" alt="Star Background">
+
 
   <!-- JavaScript for mouse movement -->
   <script src="script.js"></script>
