Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Background image as <img> -->
-  <img src="stars.gif" class="bg" alt="Star Background">
+  <img src="stars.jpg" class="bg" alt="Star Background">
 
 
   <!-- JavaScript for mouse movement -->
