Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Star Background</title>
+  <title>3D Sphere</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Three.js and OrbitControls from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.min.js"></script>
 
-  <!-- Background image as <img> -->
-  <img src="stars.jpg" class="bg" alt="Star Background">
-
-
-  <!-- JavaScript for mouse movement -->
+  <!-- Your custom script -->
   <script src="script.js"></script>
 </body>
 </html>
