--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Three.js and OrbitControls from CDN -->
+
+  <!-- ✅ Load libraries first -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.min.js"></script>
 
-  <!-- Your custom script -->
+  <!-- ✅ THEN load your custom script -->
   <script src="script.js"></script>
+
 </body>
 </html>
