Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 </head>
 <body>
 
-  <!-- ✅ Load libraries first -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.min.js"></script>
+  <!-- ✅ Use this version of Three.js that includes OrbitControls globally -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.min.js"></script>
 
-  <!-- ✅ THEN load your custom script -->
+  <!-- ✅ Your custom script -->
   <script src="script.js"></script>
-
 </body>
 </html>
