Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
 
   <!-- ✅ Use this version of Three.js that includes OrbitControls globally -->
+  <!-- ✅ Three.js version 0.146.0 (safe) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
+
+  <!-- ✅ OrbitControls that works with it -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.min.js"></script>
 
-  <!-- ✅ Your custom script -->
+  <!-- ✅ Your script file -->
   <script src="script.js"></script>
 </body>
 </html>
