Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 
+  
+  <div class="about-box">
+    <h2>About Me</h2>
+    <p id="about-text"></p>
+  </div>
+
+
   <!-- ✅ Use this version of Three.js that includes OrbitControls globally -->
   <!-- ✅ Three.js version 0.146.0 (safe) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
