Update 3D sphere and add OrbitControls

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 </head>
 <body>
 
-  
+
+  <!-- Profile Image Circle -->
+  <img id="profile-image" src="your-image.jpg" alt="Profile" />
+
+  <!-- Contact Info Box -->
+  <div class="contact-box">
+    <h2>Contact</h2>
+    <p>📞 +31 06 8482 8799</p>
+    <p>📧 <a href="mailto:sajed.sarabandi@gmail.com">sajed.sarabandi@gmail.com</a></p>
+    <p>📘 <a href="https://www.researchgate.net/profile/Sajed-Sarabandi" target="_blank">ResearchGate</a></p>
+    <p>📚 <a href="https://scholar.google.com/citations?user=hyml7ZMAAAAJ&hl=en" target="_blank">Google Scholar</a></p>
+  </div>
+
+
   <div class="about-box">
     <h2>About Me</h2>
     <p id="about-text"></p>
