--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </div>
   </div>
 
+  
+
+
   <!-- 3D canvas will be added by JS -->
   <img id="profile-image" src="your-image.jpg" alt="Profile" />
   <div class="contact-box">...</div>
@@ -70,6 +73,9 @@
   <!-- Three.js and your script -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.min.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/DRACOLoader.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
